# API_menu

./: .gitignore  Dockerfile  README.md  alembic.ini  db_app.yaml  db_for_test.yaml  db_test.yaml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2024_02_24_1246-54e8e9e711d3_create_tables.py  2958cf9923c0_add_columns_is_confirmed_confirmetion_.py  33dc7d40d7fd_create_tables.py  87c4515e601d_add_columns_confirmation_token_is_.py  9fb63c22883a_change_user_table_add_column_email_.py  aeac03339c59_create_tables.py
app/: config.py  database.py  models.py  schemas.py
app/cache/: cache_manager.py  dish_cache.py  menu_cache.py  submenu_cache.py  user_cache.py
app/repositories/: dish_repository.py  errors.py  menu_repository.py  messages.py  repository_utils.py  submenu_repository.py  user_repository.py
app/routers/: dish.py  menu.py  submenu.py  user.py
app/services/: dish_service.py  menu_service.py  submenu_service.py  user_service.py
app/tests/: conftest.py  test_dish.py  test_menu.py  test_submenu.py  test_users.py
auth/: README.md  user_views.py  utils.py
celery_app/: celery_config.py  tasks.py  utils.py
certs/: jwt-private.pem  jwt-public.pem
